Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-13054

EnqueueCompletedQuery very slow on deeply nested plans

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • Impala 4.4.0
    • Backend
    • None

    Description

      When running deeply nested queries - such as those in tests/query_test/test_nested_types.py::TestMaxNestingDepth::test_max_nesting_depth - with query logging enabled, the UnregisterQuery queue gets backed up due to very slow execution of EnqueueCompletedQuery.

      Attachments

        Activity

          People

            MikaelSmith Michael Smith
            MikaelSmith Michael Smith
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: