IMPALA-13054: Avoid revisiting children in QueryStateExpanded

Avoids revisiting children in QueryStateExpanded due to duplicate
recursion. Since process_exec_profile visits children recursively, we
only want immediate children from GetChildren, not all children from
GetAllChildren.

Adjusts HDFS_SCAN_NODE test to look back at top of stack, rather than
depend on a specific depth that was caused by calling GetAllChildren
from the root.

This was identified by running the Impala E2E test suite with workload
management enabled, where
test_nested_types.py::TestMaxNestingDepth::test_max_nesting_depth took
multiple hours to run and blocked the FinishUnregisterQuery for other
tests.

Testing:
- Manual test with enable_workload_mgmt=true running
  test_max_nesting_depth.

Change-Id: Ia36d53e52095d487ffb3a162fc723f1e815bec11
Reviewed-on: http://gerrit.cloudera.org:8080/21392
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>